--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
           <a href="/wmjt">
             <button>完美娱乐</button>
           </a>
+          <a href="/wsss">
+            <button>无双</button>
+          </a>
+          <a href="/thj">
+            <button>土豪金</button>
+          </a>
+          <a href="/hj">
+            <button>红金</button>
+          </a>
           <button
             v-for="(value, key) in platform"
             @click="changePlatform(value)"
