--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
           "龙途国际",
           "金荷娱乐",
           "曼联娱乐",
+          "华夏娱乐",
+          "鸿兴娱乐",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
