--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
           <a href="/wmjt">
             <button>完美娱乐</button>
           </a>
+          <a href="/hsss">
+            <button>红色皮肤</button>
+          </a>
           <a href="/wsss">
             <button>无双</button>
           </a>
