--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           "曼联娱乐",
           "华夏娱乐",
           "鸿兴娱乐",
+          "宏兔娱乐",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
