--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
           "华夏娱乐",
           "鸿兴娱乐",
           "宏兔娱乐",
+          "中美娱乐",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
