--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
           "鸿兴娱乐",
           "宏兔娱乐",
           "中美娱乐",
+          "瑞兔娱乐",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
