--- a/activity/index.html
+++ b/activity/index.html
@@ -151,7 +151,7 @@
         selectedAPP: 1,
         activity: [
           {
-            name: "佣金表",
+            name: "1-佣金表",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["序号", "级别", "业绩档位", "每万返佣"],
@@ -176,7 +176,7 @@
             rule: false,
           },
           {
-            name: "六级提现分红",
+            name: "2-六级提现分红",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["一级", "二级", "三级", "四级", "五级", "六级"],
@@ -196,7 +196,7 @@
             ],
           },
           {
-            name: "无限代整盘分红",
+            name: "3-无限代整盘分红",
             comment: false,
             table: {
               th: ["星级", "名称", "周业绩", "每万业绩占股份"],
@@ -247,7 +247,7 @@
             },
           },
           {
-            name: "电子捕鱼赢金榜-888",
+            name: "4-电子捕鱼赢金榜-888",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -277,7 +277,7 @@
             ],
           },
           {
-            name: "电子捕鱼赢金榜-1288",
+            name: "4-电子捕鱼赢金榜-1288",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -307,7 +307,7 @@
             ],
           },
           {
-            name: "全电子流水排行榜-888",
+            name: "4-全电子流水排行榜-888",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -336,7 +336,7 @@
             ],
           },
           {
-            name: "全电子流水排行榜-1288",
+            name: "4-全电子流水排行榜-1288",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -366,7 +366,7 @@
             ],
           },
           {
-            name: "UG棋牌流水排行榜-888",
+            name: "5-UG棋牌流水排行榜-888",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -396,7 +396,7 @@
             ],
           },
           {
-            name: "UG棋牌流水排行榜-1288",
+            name: "5-UG棋牌流水排行榜-1288",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -426,7 +426,7 @@
             ],
           },
           {
-            name: "新用户首存",
+            name: "6-新用户首存",
             comment: ["长期有效", "所有本平台新用户均可参加活动"],
             table: {
               th: ["首存金额", "新用户首存"],
@@ -471,7 +471,7 @@
             selectedActivity: {},
           },
           {
-            name: "老用户首存",
+            name: "7-老用户首存",
             comment: ["长期有效", "所有本平台老用户均可参加活动"],
             table: {
               th: ["首存金额", "新用户首存"],
@@ -514,7 +514,7 @@
             ],
           },
           {
-            name: "全民电子救援金",
+            name: "8-全民电子救援金",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["亏损金额", "电子"],
@@ -542,7 +542,7 @@
             ],
           },
           {
-            name: "周流水分红",
+            name: "9-周流水分红",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["星级", "名称", "周业绩", "每万业绩占股份"],
@@ -609,7 +609,7 @@
                 .replace("image/png", "image/octet-stream"); // 获取生成的图片的url
               let saveLink = document.createElement("a");
               saveLink.href = imgUri;
-              saveLink.download = name + ".png";
+              saveLink.download = name + "-.png";
               saveLink.click();
             });
             pic.removeAttribute("style");
