--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           "宏兔娱乐",
           "中美娱乐",
           "瑞兔娱乐",
+          "犇驰国际",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
