--- a/activity/index.html
+++ b/activity/index.html
@@ -101,7 +101,7 @@
               <div class="box">
                 <p>你的团队总业绩<br />{{selectedActivity.example.chart[0]}}</p>
               </div>
-              <img src="./img/arrow1.png" alt="" />
+              <img :src="`./img/${selectedAPP}/arrow-1.png`" alt="" />
               <div class="box">
                 <p>
                   下级A<br />业绩{{selectedActivity.example.chart[1]}}=<br />{{selectedActivity.example.chart[2]}}股
@@ -113,7 +113,7 @@
                   下级C<br />业绩{{selectedActivity.example.chart[5]}}=<br />{{selectedActivity.example.chart[6]}}股
                 </p>
               </div>
-              <img src="./img/arrow2.png" alt="" />
+              <img :src="`./img/${selectedAPP}/arrow-2.png`" alt="" />
               <div class="box">
                 <p>
                   我的股份<br />{{selectedActivity.example.chart[7]}}<br />如当前每股分红10元，则你的本周分红为{{selectedActivity.example.chart[8]}}万元
