--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
           "中美娱乐",
           "瑞兔娱乐",
           "犇驰国际",
+          "宝马国际",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
