--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
           "瑞兔娱乐",
           "犇驰国际",
           "宝马国际",
+          "路虎国际",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
