--- a/activity/index.html
+++ b/activity/index.html
@@ -366,6 +366,66 @@
             ],
           },
           {
+            name: "4-电子捕鱼直属业绩排行榜-888",
+            comment: ["长期有效", "所有本平台用户均可参加活动"],
+            table: {
+              th: ["排名", "奖金"],
+              td: [
+                ["第一名", 888],
+                ["第二名", 588],
+                ["第三名", 388],
+                ["第四名", 288],
+                ["第五名", 188],
+                ["第六名", 88],
+                ["第七名", 58],
+                ["第八名", 18],
+              ],
+            },
+            tableComment:
+              "注：每日直属业绩5万以上的代理就可以参与领取奖励（不算团队业绩）。",
+            rule: [
+              {
+                title: "活动规则",
+                text: [
+                  "1.奖金会在每日凌晨00:30自动派发，清注意查收站内邮件。",
+                  "2.奖金需3倍流水即可提现。",
+                  "3.此优惠仅限电子/捕鱼使用，若游戏其他游戏将扣除全部额度。",
+                  "4.发现任何团队或个人以不正当方式套利，将永久封号处理。"
+                ],
+              },
+            ],
+          },
+          {
+            name: "4-电子捕鱼直属业绩排行榜-1288",
+            comment: ["长期有效", "所有本平台用户均可参加活动"],
+            table: {
+              th: ["排名", "奖金"],
+              td: [
+                ["第一名", 1288],
+                ["第二名", 888],
+                ["第三名", 588],
+                ["第四名", 388],
+                ["第五名", 288],
+                ["第六名", 188],
+                ["第七名", 88],
+                ["第八名", 58],
+              ],
+            },
+            tableComment:
+              "注：每日直属业绩8万以上的代理就可以参与领取奖励（不算团队业绩）。",
+            rule: [
+              {
+                title: "活动规则",
+                text: [
+                  "1.奖金会在每日凌晨00:30自动派发，清注意查收站内邮件。",
+                  "2.奖金需3倍流水即可提现。",
+                  "3.此优惠仅限电子/捕鱼使用，若游戏其他游戏将扣除全部额度。",
+                  "4.发现任何团队或个人以不正当方式套利，将永久封号处理。"
+                ],
+              },
+            ],
+          },
+          {
             name: "5-UG棋牌流水排行榜-888",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
