--- a/activity/index.html
+++ b/activity/index.html
@@ -390,7 +390,7 @@
                   "1.奖金会在每日凌晨00:30自动派发，清注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
                   "3.此优惠仅限电子/捕鱼使用，若游戏其他游戏将扣除全部额度。",
-                  "4.发现任何团队或个人以不正当方式套利，将永久封号处理。"
+                  "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
             ],
@@ -420,7 +420,7 @@
                   "1.奖金会在每日凌晨00:30自动派发，清注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
                   "3.此优惠仅限电子/捕鱼使用，若游戏其他游戏将扣除全部额度。",
-                  "4.发现任何团队或个人以不正当方式套利，将永久封号处理。"
+                  "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
             ],
@@ -509,7 +509,7 @@
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，清注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.发现任何团队或个人以不正当方式套利，将永久封号处理。"
+                  "3.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
             ],
@@ -538,7 +538,7 @@
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，清注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.发现任何团队或个人以不正当方式套利，将永久封号处理。"
+                  "3.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
             ],
