--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
           "犇驰国际",
           "宝马国际",
           "路虎国际",
+          "辽宁舰",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
