--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
           "宝马国际",
           "路虎国际",
           "辽宁舰",
+          "野马国际",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
