--- a/activity/index.html
+++ b/activity/index.html
@@ -366,7 +366,7 @@
             ],
           },
           {
-            name: "4-电子捕鱼直属业绩排行榜-888",
+            name: "4-电子直属业绩排行榜-888",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -389,14 +389,14 @@
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，清注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.此优惠仅限电子/捕鱼使用，若游戏其他游戏将扣除全部额度。",
+                  "3.此优惠仅限电子使用，若游戏其他游戏将扣除全部额度。",
                   "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
             ],
           },
           {
-            name: "4-电子捕鱼直属业绩排行榜-1288",
+            name: "4-电子直属业绩排行榜-1288",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -419,7 +419,7 @@
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，清注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.此优惠仅限电子/捕鱼使用，若游戏其他游戏将扣除全部额度。",
+                  "3.此优惠仅限电子使用，若游戏其他游戏将扣除全部额度。",
                   "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
