--- a/92slot/index.html
+++ b/92slot/index.html
@@ -77,7 +77,7 @@
     </div>
     <div class="footBar">
       <div>
-        <img src="img/transparent.png" data-src="18vn-logo.png" alt="" />
+        <img src="img/transparent.png" data-src="app-icon.png" alt="" />
         <div>
           <p>ĐĂNG KÝ TẶNG NGAY</p>
           <h4>92000!!!</h4>
