--- a/activity/index.html
+++ b/activity/index.html
@@ -247,7 +247,7 @@
             },
           },
           {
-            name: "4-电子捕鱼赢金榜-888",
+            name: "4-电子赢金榜-888",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -270,14 +270,14 @@
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.此优惠仅限电子/捕鱼游戏使用，若游戏其他游戏将扣除全部额度。",
+                  "3.此优惠仅限电子游戏使用，若游戏其他游戏将扣除全部额度。",
                   "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
             ],
           },
           {
-            name: "4-电子捕鱼赢金榜-1288",
+            name: "4-电子赢金榜-1288",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -300,7 +300,7 @@
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.此优惠仅限电子/捕鱼游戏使用，若游戏其他游戏将扣除全部额度。",
+                  "3.此优惠仅限电子游戏使用，若游戏其他游戏将扣除全部额度。",
                   "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
@@ -486,7 +486,7 @@
             ],
           },
           {
-            name: "6-新用户首存",
+            name: "6-新用户每日首存",
             comment: ["长期有效", "所有本平台新用户均可参加活动"],
             table: {
               th: ["首存金额", "新用户首存"],
@@ -531,7 +531,7 @@
             selectedActivity: {},
           },
           {
-            name: "7-老用户首存",
+            name: "7-老用户每日首存",
             comment: ["长期有效", "所有本平台老用户均可参加活动"],
             table: {
               th: ["首存金额", "新用户首存"],
