--- a/activity/index.html
+++ b/activity/index.html
@@ -449,7 +449,7 @@
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.此活动仅限UG棋牌使用。",
+                  "3.此活动仅限UG棋牌使用，若游戏其他游戏将扣除全部额度。",
                   "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
@@ -479,7 +479,7 @@
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.此活动仅限UG棋牌使用。",
+                  "3.此活动仅限UG棋牌使用，若游戏其他游戏将扣除全部额度。",
                   "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
