--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
           "路虎国际",
           "辽宁舰",
           "野马国际",
+          "宾利国际",
+          "星辰国际",
+          "春芬娱乐",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
