--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
           "宾利国际",
           "星辰国际",
           "春芬娱乐",
+          "悍马国际",
+          "花开娱乐",
+          "幻影国际",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
