--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
           "悍马国际",
           "花开娱乐",
           "幻影国际",
+          "星空国际"
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
