--- a/activity/index.html
+++ b/activity/index.html
@@ -307,7 +307,7 @@
             ],
           },
           {
-            name: "4-全电子流水排行榜-888",
+            name: "5-全电子流水排行榜-888",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -336,7 +336,7 @@
             ],
           },
           {
-            name: "4-全电子流水排行榜-1288",
+            name: "5-全电子流水排行榜-1288",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -366,7 +366,7 @@
             ],
           },
           {
-            name: "4-电子直属业绩排行榜-888",
+            name: "5-电子直属业绩排行榜-888",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -396,7 +396,7 @@
             ],
           },
           {
-            name: "4-电子直属业绩排行榜-1288",
+            name: "5-电子直属业绩排行榜-1288",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -633,6 +633,27 @@
                   "5.个人股份=团队股份-下级股份。",
                   "6.分红领取时间为周一1点～周日23点。",
                   "7.系统自动依据等级划分分红。",
+                ],
+              },
+            ],
+          },
+          {
+            name: "9-全民业绩随时洗码",
+            comment: ["长期有效", "所有本平台用户均可参加活动"],
+            table: {
+              th: ["参与游戏", "洗码比例"],
+              td: [
+                ["电子/棋牌/捕鱼/真人", "每万业绩返20"],
+              ],
+            },
+            tableComment: false,
+            rule: [
+              {
+                title: "活动规则",
+                text: [
+                  "1.会员可以在洗码中心自助领取随时洗码。",
+                  "2.红利需1倍流水方可提现。",
+                  "3.不允许平刷/对赌等违规投注，一经发现将扣除额度，冻结账号处理。",
                 ],
               },
             ],
