--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
           "花开娱乐",
           "幻影国际",
           "星空国际",
-          "影梦国际"
+          "影梦国际",
+          "林肯国际",
+          "浪琴国际",
+          "金鲨娱乐",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
