--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
           "林肯国际",
           "浪琴国际",
           "金鲨娱乐",
+          "夏天娱乐",
+          "影音娱乐",
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
