--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
           "金鲨娱乐",
           "夏天娱乐",
           "影音娱乐",
+          "保时捷",
+          "星星国际",
+          "卡地亚"
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
