--- a/activity/index.html
+++ b/activity/index.html
@@ -307,7 +307,7 @@
             ],
           },
           {
-            name: "5-全电子流水排行榜-888",
+            name: "5-电子流水业绩排行榜-888",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -322,7 +322,7 @@
                 ["第八名", 18],
               ],
             },
-            tableComment: "注：每日满8万以上投注流水的玩家就可以参与领取奖励。",
+            tableComment: "注：每日电子满8万以上业绩的玩家就可以参与领取奖励。",
             rule: [
               {
                 title: "活动规则",
@@ -336,7 +336,7 @@
             ],
           },
           {
-            name: "5-全电子流水排行榜-1288",
+            name: "5-电子流水业绩排行榜-1288",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -352,7 +352,7 @@
               ],
             },
             tableComment:
-              "注：每日满10万以上投注流水的玩家就可以参与领取奖励。",
+              "注：每日电子满10万以上业绩的玩家就可以参与领取奖励。",
             rule: [
               {
                 title: "活动规则",
