--- a/activity/index.html
+++ b/activity/index.html
@@ -151,6 +151,21 @@
         selectedAPP: 1,
         activity: [
           {
+            name: "9-新用户充值大放送",
+            comment: ["6月27日 ~ 6月29日", "本平台新用户均可参加活动"],
+            tableComment: "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;新用户充值300送100，6倍流水出款，要求最低提现1000元，上不封顶！！<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;参与300+100活动，以小博大成功，作为素材，上公告，好玩请推荐身边朋友娱乐！",
+            rule: [
+              {
+                title: "活动规则",
+                text: [
+                  "1.新用户注册后未游戏前联系在线客服申请，只限电子游戏，如玩其他游戏扣除所有余额。",
+                  "2.未达到标准不能转账及提款，活动中途充值不算有效达标，参与此活动不可参与其他活动，违反规则将扣除全部金额。",
+                  "3.最终解释权归盛夏娱乐所有。",
+                ],
+              },
+            ],
+          },
+          {
             name: "1-佣金表",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
