--- a/activity/index.html
+++ b/activity/index.html
@@ -81,9 +81,7 @@
                 <td v-for="item in items" :key="item">{{item}}</td>
               </tr>
             </table>
-            <p class="tableComment" v-if="selectedActivity.tableComment">
-              {{selectedActivity.tableComment}}
-            </p>
+            <p class="tableComment" v-if="selectedActivity.tableComment" v-html="selectedActivity.tableComment"></p>
           </div>
           <div class="rule" v-if="selectedActivity.rule">
             <div
