--- a/activity/index.html
+++ b/activity/index.html
@@ -151,6 +151,7 @@
           {
             name: "9-新用户充值大放送",
             comment: ["6月27日 ~ 6月29日", "本平台新用户均可参加活动"],
+            table: false,
             tableComment: "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;新用户充值300送100，6倍流水出款，要求最低提现1000元，上不封顶！！<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;参与300+100活动，以小博大成功，作为素材，上公告，好玩请推荐身边朋友娱乐！",
             rule: [
               {
