--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
           "影音娱乐",
           "保时捷",
           "星星国际",
-          "卡地亚"
+          "卡地亚",
+          "盛夏娱乐"
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
