--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
           "保时捷",
           "星星国际",
           "卡地亚",
-          "盛夏娱乐"
+          "盛夏娱乐",
+          "浪花娱乐",
+          "星尚国际"
         ],
         selectedPlatform: "巴萨娱乐",
         banks: [
