--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           "浪花娱乐",
           "星尚国际"
         ],
-        selectedPlatform: platform[0],
+        selectedPlatform: this.platform[0],
         banks: [
           "中信银行",
           "包商银行",
