--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
           "卡地亚",
           "盛夏娱乐",
           "浪花娱乐",
-          "星尚国际"
+          "星尚国际",
+          "盛华国际",
+          "福鼠娱乐",
+          "米兰娱乐",
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
