--- a/activity/index.html
+++ b/activity/index.html
@@ -261,7 +261,7 @@
             },
           },
           {
-            name: "4-电子赢金榜-888",
+            name: "4-电子捕鱼赢金榜-888",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -277,21 +277,21 @@
               ],
             },
             tableComment:
-              "注：每日盈利最多的玩家方可参与领取奖励。（上排行榜赢金必须超过5000）",
+              "注：每日电子/捕鱼盈利最多的玩家方可参与领取奖励。（上排行榜赢金必须超过5000）",
             rule: [
               {
                 title: "活动规则",
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.此优惠仅限电子游戏使用，若游戏其他游戏将扣除全部额度。",
+                  "3.此优惠仅限电子/捕鱼游戏使用，若游戏其他游戏将扣除全部额度。",
                   "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
             ],
           },
           {
-            name: "4-电子赢金榜-1288",
+            name: "4-电子捕鱼赢金榜-1288",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -307,21 +307,21 @@
               ],
             },
             tableComment:
-              "注：每日盈利最多的玩家方可参与领取奖励。（上排行榜赢金必须超过10000）",
+              "注：每日电子/捕鱼盈利最多的玩家方可参与领取奖励。（上排行榜赢金必须超过10000）",
             rule: [
               {
                 title: "活动规则",
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.此优惠仅限电子游戏使用，若游戏其他游戏将扣除全部额度。",
+                  "3.此优惠仅限电子/捕鱼游戏使用，若游戏其他游戏将扣除全部额度。",
                   "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
             ],
           },
           {
-            name: "5-电子流水业绩排行榜-888",
+            name: "5-电子捕鱼流水业绩排行榜-888",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -336,21 +336,21 @@
                 ["第八名", 18],
               ],
             },
-            tableComment: "注：每日电子满8万以上业绩的玩家就可以参与领取奖励。",
+            tableComment: "注：每日电子/捕鱼满8万以上业绩的玩家就可以参与领取奖励。",
             rule: [
               {
                 title: "活动规则",
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.此优惠仅限电子游戏使用，若游戏其他场馆将扣除全部额度。",
+                  "3.此优惠仅限电子/捕鱼游戏使用，若游戏其他场馆将扣除全部额度。",
                   "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
             ],
           },
           {
-            name: "5-电子流水业绩排行榜-1288",
+            name: "5-电子捕鱼流水业绩排行榜-1288",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -366,21 +366,21 @@
               ],
             },
             tableComment:
-              "注：每日电子满10万以上业绩的玩家就可以参与领取奖励。",
+              "注：每日电子/捕鱼满10万以上业绩的玩家就可以参与领取奖励。",
             rule: [
               {
                 title: "活动规则",
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.此优惠仅限电子游戏使用，若游戏其他场馆将扣除全部额度。",
+                  "3.此优惠仅限电子/捕鱼游戏使用，若游戏其他场馆将扣除全部额度。",
                   "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
             ],
           },
           {
-            name: "5-电子直属业绩排行榜-888",
+            name: "5-电子捕鱼直属业绩排行榜-888",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -396,21 +396,21 @@
               ],
             },
             tableComment:
-              "注：每日直属业绩5万以上的代理就可以参与领取奖励（不算团队业绩）。",
+              "注：每日电子/捕鱼直属业绩5万以上的代理就可以参与领取奖励（不算团队业绩）。",
             rule: [
               {
                 title: "活动规则",
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，清注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.此优惠仅限电子使用，若游戏其他游戏将扣除全部额度。",
+                  "3.此优惠仅限电子/捕鱼使用，若游戏其他游戏将扣除全部额度。",
                   "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
             ],
           },
           {
-            name: "5-电子直属业绩排行榜-1288",
+            name: "5-电子捕鱼直属业绩排行榜-1288",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["排名", "奖金"],
@@ -426,14 +426,14 @@
               ],
             },
             tableComment:
-              "注：每日直属业绩8万以上的代理就可以参与领取奖励（不算团队业绩）。",
+              "注：每日电子/捕鱼直属业绩8万以上的代理就可以参与领取奖励（不算团队业绩）。",
             rule: [
               {
                 title: "活动规则",
                 text: [
                   "1.奖金会在每日凌晨00:30自动派发，清注意查收站内邮件。",
                   "2.奖金需3倍流水即可提现。",
-                  "3.此优惠仅限电子使用，若游戏其他游戏将扣除全部额度。",
+                  "3.此优惠仅限电子/捕鱼使用，若游戏其他游戏将扣除全部额度。",
                   "4.发现任何团队或个人以不正当方式套利，将永久封号处理。",
                 ],
               },
