--- a/agent/index.html
+++ b/agent/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="data/domainuid.js"></script>
   <script type="text/javascript" src="js/main.min.js"></script>
   <script src="./js_oss/spine-player.js"></script>
-  <title>DamanSlot Download</title>
+  <title>Gold Master Download</title>
   <script type="text/javascript">
     openSeverDate.setFullYear(2021, 11, 15); // 月份从0开始，需要-1
     openSeverDate.setHours(16);
