--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
           "盛华国际",
           "福鼠娱乐",
           "米兰娱乐",
+          "樱花娱乐",
+          "仲夏夜"
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
