--- a/activity/index.html
+++ b/activity/index.html
@@ -672,6 +672,39 @@
               },
             ],
           },
+          {
+            name: "10-UG电子排行榜",
+            comment: ["长期有效", "所有本平台用户均可参加活动"],
+            table: {
+              th: ["排名", "保底奖金","奖金比例"],
+              td: [
+                ["第一名", 750,"50%"],
+                ["第二名", 375,"25%"],
+                ["第三名", 150,"10%"],
+                ["第四名", 75,"5%"],
+                ["第五名", 60,"4%"],
+                ["第六名", 45,"3%"],
+                ["第七名", 30,"2%"],
+                ["第八名", 15,"1%"],
+              ],
+            },
+            tableComment:
+              "注：UG电子当日投注超过1万即可参与，投注额越高，玩家所获得的奖金将越多，奖金无上限。",
+            rule: [
+              {
+                title: "活动规则",
+                text: [
+                  "1.将按照所有会员在UG电子当日产生的全部投注额按照一定比例计算出累积奖金。
+                  1）若奖金总数低于1500元，结算发放将按照保底奖金派发。
+                  2）若奖金总数高于1500元，则按照奖金比例所对应的实际数值派发，无上限。",
+                  "2.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
+                  "3.奖金需三倍流水即可提现。",
+                  "4.此优惠仅限UG电子使用。",
+                  "5.发现任何团队或个人以不正当方式套利，将永久封号处理。",
+                ],
+              },
+            ],
+          },
         ],
         selectedActivity: {},
         editable: false,
