--- a/activity/index.html
+++ b/activity/index.html
@@ -694,9 +694,7 @@
               {
                 title: "活动规则",
                 text: [
-                  "1.将按照所有会员在UG电子当日产生的全部投注额按照一定比例计算出累积奖金。
-                  1）若奖金总数低于1500元，结算发放将按照保底奖金派发。
-                  2）若奖金总数高于1500元，则按照奖金比例所对应的实际数值派发，无上限。",
+                  "1.将按照所有会员在UG电子当日产生的全部投注额按照一定比例计算出累积奖金。<br/>&nbsp;&nbsp;&nbsp;1）若奖金总数低于1500元，结算发放将按照保底奖金派发。<br/>&nbsp;&nbsp;&nbsp;2）若奖金总数高于1500元，则按照奖金比例所对应的实际数值派发，无上限。",
                   "2.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
                   "3.奖金需三倍流水即可提现。",
                   "4.此优惠仅限UG电子使用。",
