--- a/activity/index.html
+++ b/activity/index.html
@@ -90,7 +90,7 @@
               :key="index"
             >
               <h3>{{item.title}}</h3>
-              <p v-for="text in item.text" :key="text">{{text}}</p>
+              <p v-for="text in item.text" :key="text" v-html="text"></p>
             </div>
           </div>
           <div class="example" v-if="selectedActivity.example">
