--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
           "福鼠娱乐",
           "米兰娱乐",
           "樱花娱乐",
-          "仲夏夜"
+          "仲夏夜",
+          "韩潮娱乐",
+          "天荷娱乐"
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
