--- a/activity/index.html
+++ b/activity/index.html
@@ -194,7 +194,7 @@
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
               th: ["一级", "二级", "三级", "四级", "五级", "六级"],
-              td: [["20%", "20%", "20%", "20%", "10%", "10%"]],
+              td: [["50%", "10%", "10%", "10%", "10%", "10%"]],
             },
             tableComment: false,
             rule: [
@@ -203,6 +203,26 @@
                 text: [
                   "1.提现时平台将会收取2%提现手续费，其中1%手续费将作为上级代理的推广奖励。",
                   "2.此费用平台将按比例分给上级6层代理。",
+                  "3.此分红奖励每日结算，请进入取款界面进行领取。",
+                  "4.直属越多，所得的返利收益就会越多，将利益送给真正做事的代理。",
+                ],
+              },
+            ],
+          },
+          {
+            name: "3-六级存款分红",
+            comment: ["长期有效", "所有本平台用户均可参加活动"],
+            table: {
+              th: ["一级", "二级", "三级", "四级", "五级", "六级"],
+              td: [["50%", "10%", "10%", "10%", "10%", "10%"]],
+            },
+            tableComment: false,
+            rule: [
+              {
+                title: "活动规则",
+                text: [
+                  "1.平台将按照玩家总存款的0.5%金额，作为上级代理的推广奖励。（0.5%是平台承担，玩家没有任何损失和之前没有变化）",
+                  "2.此分红平台将按照比例分给上级6层代理。",
                   "3.此分红奖励每日结算，请进入取款界面进行领取。",
                   "4.直属越多，所得的返利收益就会越多，将利益送给真正做事的代理。",
                 ],
