--- a/activity/index.html
+++ b/activity/index.html
@@ -235,16 +235,16 @@
             table: {
               th: ["星级", "名称", "周业绩", "每万业绩占股份"],
               td: [
-                [1, "实习生", "5万+", 3],
-                [2, "职员", "15万+", 4],
-                [3, "助理", "30万+", 5],
-                [4, "主管", "80万+", 6],
-                [5, "部门经理", "150万+", 7],
-                [6, "区域经理", "300万+", 8],
-                [7, "总经理", "500万+", 9],
-                [8, "总监", "700万+", 10],
-                [9, "董事长", "1000万+", 11],
-                [10, "运营", "1500万+", 12],
+                [1, "炼气期", "5万+", 3],
+                [2, "筑基期", "15万+", 4],
+                [3, "金丹期", "30万+", 5],
+                [4, "元婴期", "80万+", 6],
+                [5, "出窍期", "150万+", 7],
+                [6, "分神期", "300万+", 8],
+                [7, "合体期", "500万+", 9],
+                [8, "渡劫期", "700万+", 10],
+                [9, "大乘期", "1000万+", 11],
+                [10, "真仙期", "1500万+", 12],
               ],
             },
             tableComment: false,
