--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
           "樱花娱乐",
           "仲夏夜",
           "韩潮娱乐",
-          "天荷娱乐"
+          "天荷娱乐",
+          "杜卡迪",
+          "腾龙国际"
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
