--- a/index.html
+++ b/index.html
@@ -131,7 +131,10 @@
           "韩潮娱乐",
           "天荷娱乐",
           "杜卡迪",
-          "腾龙国际"
+          "腾龙国际",
+          "海洋娱乐",
+          "双子棋牌",
+          "川崎娱乐"
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
