--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
           "腾龙国际",
           "海洋娱乐",
           "双子棋牌",
-          "川崎娱乐"
+          "川崎娱乐",
+          "银河国际",
+          "开运棋牌",
+          "吉祥娱乐"
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
